--- a/components/additional-content/additional-content.css
+++ b/components/additional-content/additional-content.css
@@ -8,5 +8,5 @@
     font-size: 28px;
     font-weight: 400;
     text-transform: uppercase;
-    color: var(--grey-3);
+    color: var(--font-3);
 }
