--- a/components/icons/logo.css
+++ b/components/icons/logo.css
@@ -1,5 +1,5 @@
 .logo {
-    width: 100%;
-    height: 100%;
-    color: var(--black);
+    width: 110px;
+    height: 32px;
+    color: var(--font-1);
 }
