--- a/components/preview/preview.css
+++ b/components/preview/preview.css
@@ -1,6 +1,7 @@
 .preview {
     flex-grow: 1;
-    background-color: var(--grey-0);
+    background-color: var(--background-1);
+    transition: background-color 200ms;
 }
 .preview__container {
     padding: 23px 15px 50px;
@@ -8,9 +9,4 @@
     justify-content: center;
     flex-flow: row wrap;
     gap: 15px;
-}
-@media screen and (min-width: 768px) {
-    .preview__container {
-        gap: 30px;
-    }
 }
