--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,43 +18,64 @@
     --grey-2: #DDE2E5;
     --grey-3: #ACB5BD;
     --grey-4: #495057;
-    --grey-5: #334D6E;
-    --grey-6: #90A0B7;
-    --grey-7:  #E5E5E5;
-    --grey-8: #c4c4c4;
+    --grey-5:  #E5E5E5;
 
-    --error: var(--red);
-    --success: var(--blue);
+--error: var(--red);
+--success: var(--blue);
 
-    --primary: var(--blue);
-    --secondary: var(--purple);
+--primary: var(--blue);
+--primary-hover: var(--dark-blue);
+--secondary: var(--purple);
+--secondary-hover: var(--dark-purple);
+
+--background: var(--white);
+--background-1: var(--grey-0);
+--background-template: var(--grey-5);
+
+--font-1: var(--black);
+--font-2: var(--grey-4);
+--font-3: var(--grey-3);
+--font-4: var(--grey-2);
+
 }
+
+html[data-theme-dark] {
+    --background: var(--black);
+    --background-1: var(--grey-4);
+    --background-template: var(--grey-4);
+
+    --font-1: var(--grey-0);
+    --font-2: var(--grey-2);
+    --font-3: var(--grey-3);
+    --font-4: var(--grey-4);
+}
+
 * {
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+box-sizing: border-box;
+font-family: 'Roboto', sans-serif;
 }
 html, body, h1, h2, h3, p {
-    margin: 0;
-    padding: 0;
+margin: 0;
+padding: 0;
 }
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+box-sizing: border-box;
+font-family: 'Roboto', sans-serif;
 }
 html, body {
-    height: 100%;
+height: 100%;
 }
 body, h1, h2, h3, p {
-    margin: 0;
-    padding: 0;
+margin: 0;
+padding: 0;
 }
 h1, h2, h3 {
-    font-family: 'Inter', sans-serif;
+font-family: 'Inter', sans-serif;
 }
 .container {
-    margin: 0 auto;
-    padding: 0 15px;
-    max-width: 1110px;
+margin: 0 auto;
+padding: 0 15px;
+max-width: 1110px;
 }
