--- a/components/calendar/calendar.css
+++ b/components/calendar/calendar.css
@@ -1,8 +1,8 @@
 .calendar {
     padding: 30px;
     max-width: 304px;
-    background-color: var(--white);
-    border: 1px solid var(--grey-3);
+    background-color: var(--background);
+    border: 1px solid var(--font-3);
     border-radius: 8px;
 }
 .calendar__wrapper {
@@ -24,7 +24,7 @@
     text-align: center;
     font-family: Inter, sans-serif;
     font-weight: 600;
-    color: var(--grey-5);
+    color: var(--font-1);
 }
 .calendar__item {
     display: flex;
@@ -34,19 +34,19 @@
 .calendar__day {
     font-family: Inter, sans-serif;
     font-size: 14px;
-    color: var(--grey-6);
+    color: var(--font-3);
 }
 .calendar__date {
     font-family: "Source Sans Pro", sans-serif;
     font-size: 16px;
-    color: var(--grey-5);
+    color: var(--font-2);
 }
 .calendar__date_selection {
     background-color: var(--light-purple);
 }
 .calendar__date_selection-border {
-    background-color: var(--blue);
-    color: var(--white);
+    background-color: var(--primary);
+    color: var(--background);
 }
 .calendar_preview {
     width: 164px;
@@ -71,7 +71,7 @@
     .calendar_preview {
         width: 200px;
         padding: 15px;
-        border: 1px solid var(--grey-3);
+        border: 1px solid var(--font-3);
     }
     .calendar__wrapper_preview {
         padding-bottom: 100%;
