--- a/components/card/card.css
+++ b/components/card/card.css
@@ -7,7 +7,7 @@
     justify-content: space-between;
     align-items: center;
     border-radius: 12px;
-    background-color: var(--white);
+    background-color: var(--background);
     box-shadow: 0px 2px 4px rgba(33, 36, 41, 0.05);
     cursor: pointer;
     text-decoration: none;
@@ -29,12 +29,12 @@
 .card__title {
     line-height: 24px;
     font-size: 16px;
-    color: var(--black);
+    color: var(--font-1);
 }
 .card__type {
     line-height: 22px;
     font-size: 14px;
-    color: var(--grey-3);
+    color: var(--font-3);
 }
 @media screen and (min-width: 576px) {
     .card {
@@ -54,11 +54,11 @@
     .card__title {
         margin-bottom: 6px;
         font-size: 21px;
-        color: var(--black);
+        color: var(--font-1);
     }
     .card__type {
         font-size: 16px;
-        color: var(--grey-4);
+        color: var(--font-2);
     }
 }
 
