--- a/components/footer/footer.css
+++ b/components/footer/footer.css
@@ -1,5 +1,7 @@
 .footer {
     display: none;
+    background-color: var(--background);
+    color: var(--font-1);
 }
 .footer__title {
     margin: 70px 0 32px;
