--- a/components/form-elements/checkbox.css
+++ b/components/form-elements/checkbox.css
@@ -16,8 +16,8 @@
 .checkbox__control {
     width: 28px;
     height: 28px;
-    background-color: var(--white);
-    border: 1px solid var(--grey-2);
+    background-color: var(--background);
+    border: 1px solid var(--font-4);
     border-radius: 4px;
     position: relative;
 }
@@ -35,24 +35,29 @@
     font-family: Inter, sans-serif;
     font-size: 16px;
     line-height: 24px;
-    color: var(--grey-4);
+    color: var(--font-2);
 }
 .checkbox__input:checked ~ .checkbox__state .checkbox__control {
-    background-color: var(--blue);
-    border: var(--blue);
+    background-color: var(--primary);
+    border: var(--primary);
 }
 .checkbox__input:checked ~ .checkbox__state .checkbox__icon {
     display: block;
 }
 .checkbox__input:focus ~ .checkbox__state .checkbox__label {
-    border-bottom: 1px solid var(--grey-4);
+    border-bottom: 1px solid var(--font-2);
 }
 .checkbox__input:disabled ~ .checkbox__state .checkbox__control {
-    background-color: var(--grey-2);
-    border: var(--grey-2);
+    background-color: var(--font-4);
+    border: var(--font-4);
 }
 .checkbox__input:disabled ~ .checkbox__state .checkbox__label {
-    color: var(--grey-2);
+    color: var(--font-4);
+}
+.checkbox__input:checked ~ .checkbox__state .checkbox__control {
+    animation-name: shadow;
+    animation-duration: 500ms;
+    animation-iteration-count: 1;
 }
 .checkbox__label_preview {
     margin-left: 4px;
@@ -62,5 +67,13 @@
     .checkbox__label_preview {
         margin-left: 12px;
         font-size: 16px;
+    }
+}
+@keyframes shadow {
+    0% {
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, .2);
+    }
+    100% {
+        box-shadow: 0 0 0 25px rgba(0, 0, 0, 0);
     }
 }
