--- a/components/form-elements/form-elements.css
+++ b/components/form-elements/form-elements.css
@@ -6,6 +6,7 @@
 .form-elements__group {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     row-gap: 5px;
 }
 .form-elements__group_inputs {
