--- a/components/form-elements/input.css
+++ b/components/form-elements/input.css
@@ -5,21 +5,22 @@
 }
 .text-input__field {
     padding: 15px 25px;
-    background: var(--white);
-    border: 1px solid var(--grey-2);
+    background: var(--background);
+    border: 1px solid var(--font-4);
+    transition: border-color 200ms;
     border-radius: 8px;
     font-family: Inter, sans-serif;
     font-size: 20px;
-    color: var(--grey-4);
+    color: var(--font-2);
 }
 .text-input__field::placeholder {
-    color: var(--grey-2);
+    color: var(--font-4);
 }
 .text-input__field::-webkit-input-placeholder {
-    color: var(--grey-2);
+    color: var(--font-4);
 }
 .text-input__field::-ms-input-placeholder {
-    color: var(--grey-2);
+    color: var(--font-4);
 }
 .text-input__label {
     margin-bottom: 5px;
@@ -28,19 +29,20 @@
     font-size: 12px;
     line-height: 18px;
     text-transform: uppercase;
-    color: var(--grey-3);
+    color: var(--font-3);
 }
 .text-input__message {
     font-family: Inter, sans-serif;
     font-size: 12px;
     line-height: 18px;
-    color: var(--grey-3);
+    color: var(--font-3);
 }
 .text-input_success .text-input__field{
-    border: 1px solid var(--blue);
+    border: 1px solid var(--success);
+    transition: border-color 200ms;
 }
 .text-input_success .text-input__message {
-    color: var(--blue);
+    color: var(--success);
 }
 .text-input__success-icon {
     display: none;
@@ -52,10 +54,10 @@
     height: 24px;
 }
 .text-input_invalid .text-input__field {
-    border: 1px solid var(--red);
+    border: 1px solid var(--error);
 }
 .text-input_invalid .text-input__message {
-    color: var(--red);
+    color: var(--error);
 }
 .text-input__invalid-icon {
     display: none;
@@ -65,11 +67,11 @@
     transform: translate(-100%, -50%);
     width: 24px;
     height: 24px;
-    color: var(--red);
+    color: var(--error);
 }
 .text-input__field:focus {
     outline: none;
-    border: 1px solid var(--blue);
+    border: 1px solid var(--primary);
 }
 .text-input__field:focus ~ .text-input__invalid-icon {
     display: none;
@@ -78,7 +80,7 @@
 }
 .text-input__field:disabled {
     outline: none;
-    background-image: linear-gradient(135deg, var(--grey-2) 20%, var(--white) 20%, var(--white) 50%, var(--grey-2) 50%, var(--grey-2) 70%, var(--white) 70%, var(--white) 100%);
+    background-image: linear-gradient(135deg, var(--font-4) 20%, var(--background) 20%, var(--background) 50%, var(--font-4) 50%, var(--font-4) 70%, var(--background) 70%, var(--background) 100%);
     background-size: 5px 5px;
 }
 .text-input__field:disabled::placeholder {
