--- a/components/form-elements/radio.css
+++ b/components/form-elements/radio.css
@@ -16,8 +16,8 @@
 .radio__control {
     width: 28px;
     height: 28px;
-    background-color: var(--white);
-    border: 1px solid var(--grey-2);
+    background-color: var(--background);
+    border: 1px solid var(--font-4);
     border-radius: 50%;
     position: relative;
 }
@@ -35,23 +35,23 @@
     font-family: Inter, sans-serif;
     font-size: 16px;
     line-height: 24px;
-    color: var(--grey-4);
+    color: var(--font-2);
 }
 .radio__input:checked ~ .radio__state .radio__control {
-    border: 2px solid var(--blue);
+    border: 2px solid var(--primary);
 }
 .radio__input:checked ~ .radio__state .radio__icon {
     display: block;
 }
 .radio__input:focus ~ .radio__state .radio__label {
-    border-bottom: 1px solid var(--grey-4);
+    border-bottom: 1px solid var(--font-2);
 }
 .radio__input:disabled ~ .radio__state .radio__control {
-    background-color: var(--grey-2);
-    border: 2px solid var(--grey-2);
+    background-color: var(--font-4);
+    border: 2px solid var(--font-4);
 }
 .radio__input:disabled ~ .radio__state .radio__label {
-    color: var(--grey-2);
+    color: var(--font-4);
 }
 .radio__label_preview {
     margin-left: 4px;
