--- a/components/form-elements/toggler.css
+++ b/components/form-elements/toggler.css
@@ -1,6 +1,7 @@
 .toggle {
-    display: inline-block;
-    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
 .toggle__input {
     position: absolute;
@@ -16,10 +17,12 @@
 .toggle__control {
     width: 52px;
     height: 28px;
-    background: var(--white);
-    border: 1px solid var(--grey-2);
+    background: var(--background);
+    border: 1px solid var(--font-4);
     border-radius: 16px;
     position: relative;
+    transition: background-color 500ms, border-color 500ms;
+    cursor: pointer;
 }
 .toggle__button {
     position: absolute;
@@ -27,33 +30,47 @@
     left: 1px;
     width: 24px;
     height: 24px;
-    background: var(--grey-2);
     border-radius: 16px;
+    background-color: var(--font-4);
+    transform: translateX(0);
+    transition: transform 500ms, background-color 500ms;
 }
 .toggle__label {
     margin-left: 12px;
     font-family: Inter, sans-serif;
     font-size: 16px;
     line-height: 24px;
-    color: var(--grey-4);
+    color: var(--font-2);
+}
+.toggle__input[checked="true"] ~ .toggle__state .toggle__control {
+    background-color: var(--primary);
+    border-color: var(--primary);
+    transition: background-color 500ms, border-color 500ms;
+}
+.toggle__input[checked="true"] ~ .toggle__state .toggle__button {
+    transform: translateX(100%);
+    background-color: var(--background);
+    transition: transform 500ms, background-color 500ms;
 }
 .toggle__input:checked ~ .toggle__state .toggle__control {
-    background-color: var(--blue);
-    border-color: var(--blue);
+    background-color: var(--primary);
+    border-color: var(--primary);
+    transition: background-color 500ms, border-color 500ms;
 }
 .toggle__input:checked ~ .toggle__state .toggle__button {
-    transform: translate(100%, 0);
-    background-color: var(--white);
+    transform: translateX(100%);
+    background-color: var(--background);
+    transition: transform 500ms, background-color 500ms;
 }
 .toggle__input:focus ~ .toggle__state .toggle__label {
-    border-bottom: 1px solid var(--grey-4);
+    border-bottom: 1px solid var(--font-2);
 }
 .toggle__input:disabled ~ .toggle__state .toggle__control {
-    background-color: var(--grey-2);
+    background-color: var(--font-4);
 }
 .toggle__input:disabled ~ .toggle__state .toggle__button {
-    background-color: var(--grey-3);
+    background-color: var(--font-3);
 }
 .toggle__input:disabled ~ .toggle__state .toggle__label {
-    color: var(--grey-2);
+    color: var(--font-4);
 }
