--- a/components/header/header.css
+++ b/components/header/header.css
@@ -1,20 +1,34 @@
+.header__main {
+    margin: 25px 0 40px;
+    display: flex;
+    align-items: center;
+}
 .header__logo {
-    margin: 15px auto 40px;
+    margin: 0 auto;
     width: 110px;
     height: 32px;
     cursor: pointer;
+}
+.header__icon {
+    color: var(--font-1);
 }
 .header__title {
     margin-bottom: 40px;
     font-size: 28px;
     font-weight: 400;
+    color: var(--font-1);
 }
 @media screen and (min-width: 768px) {
-    .header__logo {
-        margin: 25px 0 40px;
-    }
     .header__title {
         font-size: 50px;
         font-weight: 500;
+    }
+}
+@media screen and (min-width: 992px) {
+    .header__main {
+        justify-content: space-between;
+    }
+    .header__logo {
+        margin: 0;
     }
 }
