--- a/components/histogram/histogram.css
+++ b/components/histogram/histogram.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     padding: 16px 24px 24px;
     height: 185px;
-    border: solid 1px var(--grey-3);
+    border: solid 1px var(--font-3);
     border-radius: 8px;
     font-family: Inter, sans-serif;
 }
@@ -14,16 +14,16 @@
 }
 .histogram__title {
     font-size: 16px;
-    color: var(--black);
+    color: var(--font-1);
 }
 .histogram__number {
     font-size: 20px;
-    color: var(--black);
+    color: var(--font-1);
 }
 .histogram__full {
     font-size: 16px;
     text-decoration: none;
-    color: var(--blue);
+    color: var(--primary);
 }
 .histogram__chart {
     display: flex;
@@ -31,10 +31,13 @@
     align-items: flex-end;
     margin-top: 40px;
     height: 50px;
+    animation-name: column-grow;
+    animation-duration: 800ms;
+    animation-iteration-count: 1;
 }
 .histogram__column {
     flex: 1 1 9px;
-    background-color: var(--blue);
+    background-color: var(--primary);
 }
 .histogram_preview {
     width: 164px;
@@ -61,7 +64,7 @@
         width: 300px;
         padding: 16px 24px 24px;
         height: 185px;
-        border: solid 1px var(--grey-3);
+        border: solid 1px var(--font-3);
     }
     .histogram__chart_preview {
         margin-top: 40px;
@@ -74,6 +77,20 @@
     }
     .histogram__full_preview {
         font-size: 16px;
+    }
+}
+@keyframes column-grow {
+    0% {
+        transform: scaleY(0);
+        transform-origin: bottom center;
+    }
+    50% {
+        transform: scaleY(0);
+        transform-origin: bottom center;
+    }
+    100% {
+        transform: scaleY(1);
+        transform-origin: bottom center;
     }
 }
 
