--- a/components/icons/modal.css
+++ b/components/icons/modal.css
@@ -1,5 +1,5 @@
 .modal-icon {
-    width: 100%;
-    height: 100%;
-    color: var(--black);
+    width: 24px;
+    height: 24px;
+    color: var(--font-1);
 }
