--- a/components/modal/modal.css
+++ b/components/modal/modal.css
@@ -18,7 +18,7 @@
     width: 100%;
     height: 350px;
     padding: 30px 40px;
-    background-color: var(--white);
+    background-color: var(--background);
     border-radius: 8px;
 }
 .modal__close {
@@ -33,6 +33,7 @@
     margin-bottom: 16px;
     font-family: Inter, sans-serif;
     font-size: 16px;
+    color: var(--font-1);
 }
 .modal__form {
     display: flex;
@@ -51,7 +52,7 @@
     padding: 10px 20px;
     width: 100%;
     height: 120px;
-    background-color: var(--white);
+    background-color: var(--background);
     border-radius: unset;
 }
 .modal__form_preview {
