--- a/components/page/page.css
+++ b/components/page/page.css
@@ -2,4 +2,6 @@
     display: flex;
     height: 100%;
     flex-direction: column;
+    background-color: var(--background);
+    transition: background-color 200ms;
 }
