--- a/components/separating-line/separating-line.css
+++ b/components/separating-line/separating-line.css
@@ -1,7 +1,7 @@
 .separating-line {
     width: 100%;
     height: 1px;
-    background-color: var(--grey-2);
+    background-color: var(--font-4);
 }
 .separating-line_template {
     display: block;
