--- a/components/skeleton/skeleton.css
+++ b/components/skeleton/skeleton.css
@@ -5,7 +5,7 @@
     padding: 24px 40px 32px 24px;
     width: 300px;
     height: 192px;
-    border: solid 1px var(--grey-3);
+    border: solid 1px var(--font-3);
     border-radius: 8px;
 }
 .skeleton__header {
@@ -16,7 +16,6 @@
 .skeleton__picture {
     width: 64px;
     height: 64px;
-    background-color: var(--grey-2);
     border-radius: 50%;
 }
 .skeleton__title {
@@ -31,7 +30,6 @@
 }
 .skeleton__line {
     height: 20px;
-    background-image: linear-gradient( to right, var(--grey-2) 6.44%, #E2E6E8 38.47%, #F3F5F5 56.48%, #E3E7EA 77.5%, var(--grey-2) 102.52%);
 }
 .skeleton__line_name {
     width: 100px;
@@ -42,7 +40,22 @@
 .skeleton__line_text {
     width: 250px;
 }
-
+.skeleton__line, .skeleton__picture {
+    background-image: linear-gradient(267.58deg, var(--font-4) 0%, var(--grey-1) 80%, var(--font-4) 100%);
+    background-size: 200%;
+    animation-name: move-background;
+    animation-duration: 1500ms;
+    animation-iteration-count: infinite;
+    animation-fill-mode: forwards;
+}
+@keyframes move-background {
+    0% {
+        background-position: -100%;
+    }
+    0% {
+        background-position: 100%;
+    }
+}
 @media screen and (min-width: 768px) {
     .skeleton {
         width: 579px;
