--- a/components/tooltip/tooltip.css
+++ b/components/tooltip/tooltip.css
@@ -14,11 +14,11 @@
     bottom: 100%;
     transform: translate(-50%, -5px);
     padding: 10px 18px;
-    background-color: var(--blue);
+    background-color: var(--primary);
     border-radius: 10px;
     font-family: Inter, sans-serif;
     font-size: 12px;
-    color: var(--grey-2);
+    color: var(--font-4);
     white-space: nowrap;
 }
 .tooltip__text:after {
@@ -27,7 +27,7 @@
     transform: translate(-50%, calc(100% + 9px));
     content: '';
     border: 10px solid transparent;
-    border-top: 6px solid var(--blue);
+    border-top: 6px solid var(--primary);
 }
 .tooltip__trigger:hover ~ .tooltip__text {
     display: block;
@@ -48,6 +48,6 @@
     .tooltip__text:after {
         transform: translate(-50%, calc(100% + 12px));
         border: 12px solid transparent;
-        border-top: 8px solid var(--blue);
+        border-top: 8px solid var(--primary);
     }
 }
