--- a/pages/template-components/template-header/template-header.css
+++ b/pages/template-components/template-header/template-header.css
@@ -1,11 +1,14 @@
+.template-header__main {
+    margin: 25px 0 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 .template-header__logo {
-    margin: 15px auto 40px;
     width: 110px;
     height: 32px;
     cursor: pointer;
 }
-@media screen and (min-width: 992px) {
-    .template-header__logo {
-        margin: 25px 0 40px;
-    }
+.template-header__icon {
+    color: var(--font-1);
 }
