Fixed burger-menu trigger position

--- a/components/burger-menu/burger-menu.css
+++ b/components/burger-menu/burger-menu.css
@@ -1,5 +1,5 @@
 .burger-menu__trigger {
-    position: fixed;
+    position: absolute;
     align-self: flex-start;
     top: 25px;
     left: 16px;
