--- a/components/form-elements/radio.css
+++ b/components/form-elements/radio.css
@@ -54,11 +54,11 @@
     color: var(--font-4);
 }
 .radio__label_preview {
-    margin-left: 4px;
-    font-size: 12px;
+    display: none;
 }
 @media screen and (min-width: 768px) {
     .radio__label_preview {
+        display: block;
         margin-left: 12px;
         font-size: 16px;
     }
