--- a/components/form-elements/form-elements.css
+++ b/components/form-elements/form-elements.css
@@ -16,8 +16,8 @@
 }
 .form-elements_preview {
     width: 164px;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    justify-content: space-evenly;
     padding: 0 5px;
     row-gap: 5px;
     pointer-events: none;
@@ -33,8 +33,6 @@
     }
     .form-elements_preview {
         width: 164px;
-        flex-direction: column;
-        align-items: center;
         padding: 0 5px;
         row-gap: 5px;
     }
